<resources>
    <string name="app_name">BasicLayout</string>

    <string name="label_text">Some text in label</string>
    <string name="edittext_hint">Edit text</string>
    <string name="label_switch_text">Change label color</string>
    <string name="button_hideList_text">Hide list</string>
    <string name="button_toast_text">Toast</string>
    <string name="toast_text">Text in toast</string>

    <string name="drawer_header_text">Tasks</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="button_task1_text">Task 1</string>
    <string name="button_task2_text">Task 2</string>
    <string name="button_task3_text">Task 3</string>
    <string name="textView_coursePoints_label">Course points</string>

    <string name="details_imageLabel">Image label</string>
    <string name="details_textViewDescription" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam</string>
    <string name="details_defaultNumber" translatable="false">0</string>
    <string name="details_buttonNat">Natural</string>
    <string name="details_buttonFib">Fibonacci</string>
    <string name="details_buttonCol">Collatz</string>
    <string name="task1_image_lefttop_description">Full moon</string>
    <string name="task1_image_bottom_description">Moon stages</string>
    <string name="task1_fab_description">Set text</string>
    <string name="task1_imageMain_description">Main image</string>
    <string name="task1_image_icon_description">Icon</string>
</resources>