<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Task1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@color/black"
            tools:ignore="NestedWeights">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="top"
                android:contentDescription="@string/task1_image_lefttop_description"
                app:srcCompat="@drawable/moon_full" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:contentDescription="@string/task1_image_bottom_description"
                app:srcCompat="@drawable/moon_stages" />
        </FrameLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:background="@color/teal_200" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:text="@string/label_text"
            android:textAlignment="center"
            android:textSize="@dimen/textSize_standard" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:ems="10"
            android:hint="@string/edittext_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/textSize_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/switch1"
                android:text="@string/label_switch_text"
                android:textSize="@dimen/textSize_small" />
        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_hideList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_hideList_text" />

                <Button
                    android:id="@+id/button_toast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_toast_text" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard"
                android:clickable="true"
                android:contentDescription="@string/task1_fab_description"
                android:focusable="true"
                app:srcCompat="@android:drawable/ic_input_add" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

</LinearLayout>